[workspace]
members = [
  "async-kvdb",
  "async-memorydb",
  "async-filedb",
  "examples",
]
resolver = "2"

[workspace.package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "A key-value database"
edition = "2021"
keywords = ["kvdb"]
license-file = "LICENSE"
readme = "./README.md"
repository = "https://github.com/rise0chen/async-kvdb"
version = "0.3.0"

[workspace.dependencies]
async-filedb = {version = "0", path = "./async-filedb", default-features = false}
async-kvdb = {version = "0", path = "./async-kvdb", default-features = false}
async-memorydb = {version = "0", path = "./async-memorydb", default-features = false}

[patch.crates-io]
