[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "async-filedb"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-channel = {version = "1.8.0"}
async-kvdb = {workspace = true}
async-memorydb = {workspace = true}
form_urlencoded = "1.0"
log = "0.4"
