[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "async-filedb"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
auto_sync = []

[dependencies]
async-channel = {version = "2", default-features = false, features = ["std"]}
async-kvdb = {workspace = true}
async-memorydb = {workspace = true}
form_urlencoded = {version = "1", default-features = false, features = ["alloc"]}
log = {version = "0.4", default-features = false}
oneshot = {version = "0.2", default-features = false, features = ["async"]}
