[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "async-kvdb"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
smol_str = "0.2"
