[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "async-kvdb"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []
json = ["serde", "serde_json"]
proto = ["prost"]

[dependencies]
async-trait = {version = "0.1", default-features = false}
bytes = {version = "1", default-features = false}
futures-util = {version = "0.3", default-features = false}
log = {version = "0.4", default-features = false}
oneshot = {version = "0.2", default-features = false}
prost = {version = "0.14", default-features = false, optional = true}
serde = {version = "1", default-features = false, features = ["derive"], optional = true}
serde_json = {version = "1", default-features = false, features = ["alloc"], optional = true}
smol_str = {version = "0.3", default-features = false}
