[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "async-memorydb"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-kvdb = {workspace = true}
async-lock = {version = "2.7.0"}
