[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "async-kvdb-examples"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-kvdb = {workspace = true, features = ["json", "proto"]}
async-memorydb = {workspace = true}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
